[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game State/RunManager/EnemyManager/EnemyManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game State/RunManager/RoomManager/RoomManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game State/RunManager/RunManager.gd" type="Script" id=3]
[ext_resource path="res://Game State/RunManager/LootManager/LootManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game State/RunManager/PropertiesManager.gd" type="Script" id=5]

[node name="RunManager" type="Node"]
script = ExtResource( 3 )

[node name="PropertiesManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="EnemyManager" parent="." instance=ExtResource( 1 )]

[node name="LootManager" parent="." instance=ExtResource( 4 )]

[node name="RoomManager" parent="." instance=ExtResource( 2 )]
